--- a/react_login_hooks-main/react_login_hooks-main/public/index.html
+++ b/react_login_hooks-main/react_login_hooks-main/public/index.html
@@ -8,7 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AXOkzBh3I5x1tDQFFI1lvc3sS-hHot8iKThbKTn_zT5KDY_7wiVL6aifg8nEpVodI5Gjltp9LYgixRi7" crossorigin="anonymous"></script>
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
